fix::proses cek ongkir dengan kecamatan sebagai point tujuan

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -55,7 +55,7 @@
             <i class="icon f7-icons" style="width: auto;">cube_box</i>
             <span class="text-align-center">Cek Resi</span>
           </a>
-          <a href="/page/cek-ongkir#Cek Ongkos Kirim" class="col" style="display: grid;">
+          <a href="/cek-ongkir/" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">cube</i>
             <span class="text-align-center">Cek Ongkir</span>
           </a>
