--- a/src/pages/static-page.f7.html
+++ b/src/pages/static-page.f7.html
@@ -30,7 +30,7 @@
     // Lifecycle Hooks
     mounted() {
       console.log('# STATIC PAGE ------------------------------------------------------------------');
-
+      const self = this;
       let $$ = this.$$;
       let app = this.$app;
       let router = this.$router;
@@ -181,209 +181,6 @@
                 </ul>
               </div>            
             `);
-            break;
-          case 'cek-ongkir':
-            pageContent.html(`
-              <div class="toolbar tabbar toolbar-top" style="position:fixed">
-                <div class="toolbar-inner">
-                  <a href="#tab-1-reward" class="tab-link tab-link-active">Domestik</a>
-                  <a href="#tab-2-reward" class="tab-link">Internasional</a>
-                </div>
-              </div>
-              <div class="tabs" style="margin: -5em 0em -5em 0em !important;">
-                <div id="tab-1-reward" class="page-content tab tab-active">
-                  <div class="block">
-                    <div class="list inset">
-                    <form action="javascript:void(0)" id="formCekOngkir">
-                      <ul>
-                        <li class="item-content item-input">
-                          <div class="item-inner">
-                            <div class="item-input-wrap">
-                              <input name="city" id="autocomplete-dropdown-expand" type="text" placeholder="Kota tujuan pengiriman" required autocomplete="off">
-                            </div>
-                          </div>
-                        </li>
-                        <li class="item-content item-input">
-                          <div class="item-inner">
-                            <div class="item-input-wrap">
-                              <input name="subdistrict" id="autocomplete-dropdown-expand-subdistrict" type="text" placeholder="Kecamatan tujuan pengiriman" required autocomplete="off">
-                            </div>
-                          </div>
-                        </li>
-                        <li class="item-content item-input">
-                          <div class="item-inner">
-                            <div class="item-title item-label">Berat (Gram)</div>
-                            <div class="item-input-wrap">
-                              <input name="weight" id="inputWeight" type="number" placeholder="Berat kiriman" value="1000" required>
-                            </div>
-                          </div>
-                        </li>                  
-                        <li class="item-content">
-                          <input name="city_id" id="cityId" type="hidden">
-                          <input name="destination" id="destinationId" type="hidden">
-                          <button type="submit" class="col button button-fill">Periksa Ongkir</button>
-                        </li>
-                      </ul>
-                    </form>
-                    </div> 
-                  </div>
-                </div>
-                <div id="tab-2-reward" class="page-content tab">
-                  <div class="block text-align-justify">
-                    <p>informasi point reward</p>
-                  </div>
-                </div>
-              </div>
-              <div id="listCouriers" class="block"></div>
-              <div class="row text-align-center">
-                <div class="col-100">
-                  <div class="preloader" style="display:none"></div>
-                </div>
-              </div>             
-            `);
-            
-            $$( "#formCekOngkir #autocomplete-dropdown-expand-subdistrict" ).prop( "disabled", true );
-
-            var autocompleteDropdownExpand = app.autocomplete.create({
-              inputEl: '#autocomplete-dropdown-expand',
-              openIn: 'dropdown',
-              valueProperty: 'city_name', //object's "value" property name
-              textProperty: 'city_name', //object's "text" property name
-              source: function (query, render) {
-                var results = [];
-                if (query.length < 3) {
-                  render(results);
-                  return;
-                }
-
-                app.request({
-                  url: 'static/cities.json',
-                  method: 'GET',
-                  dataType: 'json',
-                  //send "query" to server. Useful in case you generate response dynamically
-                  data: {
-                    query: query
-                  },
-                  success: function (data) {
-                    // console.log(data)
-                    // Find matched items
-                    for (var i = 0; i < data.length; i++) {
-                      // console.log(data[i].city_name.toLowerCase())
-                      if (data[i].city_name.toLowerCase().indexOf(query.toLowerCase()) >= 0)
-                        results.push(data[i]);
-                    }
-                    // console.log(results)
-                    // Render items by passing array with result items
-                    render(results);
-                  }
-                });
-              },
-              on: {
-                change: function (value) {
-                  $$('#formCekOngkir').find('#cityId').val(value[0].city_id);
-                  $$( "#formCekOngkir #autocomplete-dropdown-expand-subdistrict" ).prop( "disabled", false );
-                }
-              }
-            });
-
-            var autocompleteDropdownExpandKecamatan = app.autocomplete.create({
-              inputEl: '#formCekOngkir #autocomplete-dropdown-expand-subdistrict',
-              openIn: 'dropdown',
-              valueProperty: 'subdistrict_name', //object's "value" property name
-              textProperty: 'subdistrict_name', //object's "text" property name
-              source: function (query, render) {
-                var results = [];
-                if (query.length < 3) {
-                  render(results);
-                  return;
-                }
-                let city = $$('#formCekOngkir').find('#cityId').val();
-
-                app.request({
-                  url: 'http://m.anakhebatindonesia.com/ongkir/subdistrict',
-                  method: 'GET',
-                  dataType: 'json',
-                  //send "query" to server. Useful in case you generate response dynamically
-                  data: {
-                    city: city
-                  },
-                  success: function (data) {
-                    data = data.rajaongkir.results;
-
-                    // Find matched items
-                    for (var i = 0; i < data.length; i++) {
-                      // console.log(data[i].city_name.toLowerCase())
-                      if (data[i].subdistrict_name.toLowerCase().indexOf(query.toLowerCase()) >= 0)
-                        results.push(data[i]);
-                    }
-                    // console.log(results)
-                    // Render items by passing array with result items
-                    render(results);
-                  }
-                });
-              },
-              on: {
-                change: function (value) {
-                  $$('#formCekOngkir').find('#destinationId').val(value[0].subdistrict_id);
-                  console.log(value)
-                }
-              }
-            });
-
-            $$('#formCekOngkir').on('submit',function(e){
-              let getInput = {
-                "city" : document.getElementById("autocomplete-dropdown-expand").value,
-                "weight" : document.getElementById("inputWeight").value,
-              };
-              app.request({
-                url: 'static/cities.json',
-                method: 'GET',
-                dataType: 'json',
-                //send "query" to server. Useful in case you generate response dynamically
-                // data: {
-                //   query: getInput
-                // },
-                success: function (data) {
-                  let results = [];
-                  // console.log(data)
-                  // Find matched items
-                  for (var i = 0; i < data.length; i++) {
-                    // console.log(data[i].city_name.toLowerCase())
-                    if (data[i].city_name.toLowerCase().indexOf(getInput.city.toLowerCase()) >= 0) results.push(data[i]);
-                  }
-
-                  pageContent.find('#listCouriers').html('');
-                  // results.forEach(function(item,index) {
-                  //   app.preloader.show();
-                  //   app.request.getJSON(`https://m.anakhebatindonesia.com/ongkir/cost-all?destination=${item.city_id}&weight=${getInput.weight}`, function (cost) {
-                  //     let listCouriersByCity = [];
-                  //     cost.forEach(function(itemCost,indexCost){
-                  //       let title = `${itemCost.code} ${itemCost.service} (${itemCost.etd}) - IDR ${itemCost.value}`;
-                  //       listCouriersByCity.push(`<tr><td class="label-cell">${title}</td></tr>`);
-                  //     })
-                  //     listCouriersByCity = listCouriersByCity.join('');
-                  //     let listCouriersByCityHTML = `
-                  //     <div class="data-table">
-                  //       <table>
-                  //         <thead>
-                  //           <tr>
-                  //             <th class="label-cell">Hasil pengecekan ke <b class="padding-horizontal-half">${item.city_name}</b> @ <b class="padding-horizontal-half">${getInput.weight}</b> Gram</th>
-                  //           </tr>
-                  //         </thead>
-                  //         <tbody>
-                  //           ${listCouriersByCity}
-                  //         </tbody>
-                  //       </table>
-                  //     </div>`;
-                  //     pageContent.find('#listCouriers').append(listCouriersByCityHTML);
-                  //     app.preloader.hide();
-                  //   })
-                  // })
-                }
-              });
-
-            });
-
             break;
           case 'penawaran-khusus':
           // app.preloader.show();
