self page cek resi

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -51,7 +51,8 @@
             <i class="icon f7-icons" style="width: auto;">gift</i>
             <span class="text-align-center">Reward</span>
           </a>
-          <a href="/page/cek-resi#Informasi Cek Resi" class="col" style="display: grid;">
+          <a href="/cek-resi/" class="col" style="display: grid;">
+          <!-- <a href="/page/cek-resi#Informasi Cek Resi" class="col" style="display: grid;"> -->
             <i class="icon f7-icons" style="width: auto;">cube_box</i>
             <span class="text-align-center">Cek Resi</span>
           </a>
