--- a/src/pages/account.f7.html
+++ b/src/pages/account.f7.html
@@ -21,13 +21,12 @@
 
       self.$app.localforage.getItem('users', function (err, value) {
           // if err is non-null, we got an error. otherwise, value is the value
-          if (err===null) {
+          if ( (err===null) && (value===null) ) {
             self.$router.navigate('/account-user-login/',{ transition: 'f7-fade' });
-          }
+          } 
           
-          if ( value ) {
-            console.log(value)
-            // self.$router.navigate('/account-user/',{ transition: 'f7-fade' });
+          if ( value && (err===null) ) {
+            self.$router.navigate('/account-user/',{ transition: 'f7-fade' });
           }
         });
     },
